Add Testing Order Service domain logic